<resources>
    <string name="ent_total" formatted="false">Total sum</string>
    <string name="ent_income" formatted="false">Income</string>
    <string name="ok" formatted="false">OK</string>
    <string name="cancel" formatted="false">Cancel</string>
    <string name="ent_outcome" formatted="false">Expense</string>
    <string name="ent_name" formatted="false">Name</string>
    <string name="ent_type" formatted="false">Type</string>
    <string name="ent_date" formatted="false">Date</string>
    <string name="ent_time" formatted="false">Time</string>
    <string name="ent_amount" formatted="false">Amount</string>
    <string name="ent_comment" formatted="false">Comment</string>
    <string name="ent_search" formatted="false">Search</string>
    <string name="sort_type_asc" formatted="false">Ascending</string>
    <string name="sort_type_desc" formatted="false">Descending</string>
    <string name="ent_start_date" formatted="false">Start date</string>
    <string name="ent_end_date" formatted="false">Finish date</string>
    <string name="ent_date_range" formatted="false">Date interval</string>
    <string name="ent_date_range_day" formatted="false">Day</string>
    <string name="ent_date_range_week" formatted="false">Week</string>
    <string name="ent_date_range_month" formatted="false">Month</string>
    <string name="ent_date_range_year" formatted="false">Year</string>
    <string name="ent_date_range_current" formatted="false">Current</string>
    <string name="ent_date_range_past" formatted="false">Last</string>
    <string name="ent_date_range_current_and_past" formatted="false">Curr. and last</string>
    <string name="ent_min" formatted="false">min</string>
    <string name="ent_max" formatted="false">max</string>
    <string name="ent_both" formatted="false">Both</string>
    <string name="ent_exchange_rate" formatted="false">Exchange rate</string>
    <string name="ent_additional" formatted="false">Additional</string>
    <string name="ent_references" formatted="false">Entities</string>
    <string name="ent_help" formatted="false">Help</string>
    <string name="ent_percent" formatted="false">Percent</string>
    <string name="ent_percents" formatted="false">Percents</string>
    <string name="ent_more" formatted="false">More</string>
    <string name="ent_password" formatted="false">Password</string>
    <string name="ent_item" formatted="false">Item</string>
    <string name="ent_nested_item" formatted="false">Child item</string>
    <string name="ent_calculator" formatted="false">Calculator</string>
    <string name="ent_summary" formatted="false">Summary</string>
    <string name="ent_date_time" formatted="false">Date, time</string>
    <string name="ent_payee_dest_account" formatted="false">Payee or destination account</string>
    <string name="ent_sms_body" formatted="false">SMS body</string>
    <string name="ent_monday" formatted="false">Monday</string>
    <string name="ent_sunday" formatted="false">Sunday</string>
    <string name="ent_undefined" formatted="false">Undefined</string>
    <string name="act_create" formatted="false">New</string>
    <string name="act_select" formatted="false">Select</string>
    <string name="act_add" formatted="false">Add</string>
    <string name="act_add_nested" formatted="false">Add child</string>
    <string name="act_edit" formatted="false">Edit</string>
    <string name="act_delete" formatted="false">Delete</string>
    <string name="act_delete_all" formatted="false">Delete all</string>
    <string name="act_undo" formatted="false">Undo</string>
    <string name="act_duplicate" formatted="false">Duplicate</string>
    <string name="act_sort" formatted="false">Sort</string>
    <string name="act_paste" formatted="false">Paste</string>
    <string name="act_next" formatted="false">Next</string>
    <string name="act_save" formatted="false">Save</string>
    <string name="act_check_and_save" formatted="false">Check &amp; Save</string>
    <string name="act_ask_question" formatted="false">Ask a question</string>
    <string name="act_new_expense" formatted="false">New expense</string>
    <string name="act_new_income" formatted="false">New income</string>
    <string name="act_new_transfer" formatted="false">New transfer</string>
    <string name="act_do_not_remind" formatted="false">Don\'t remind</string>
    <string name="ttl_enter_new_name" formatted="false">Enter new name</string>
    <string name="ttl_confirm_action" formatted="false">Confirm action</string>
    <string name="ttl_select_action" formatted="false">Select an action</string>
    <string name="ttl_error" formatted="false">Error</string>
    <string name="ttl_delete_item_confirm" formatted="false">Delete item?</string>
    <string name="ttl_email_subject" formatted="false">Question about Fingen app</string>
    <string name="ttl_email_body" formatted="false">Write your question</string>
    <string name="ttl_billing_error" formatted="false">Server connection error (code %s)</string>
    <string name="msg_set_date" formatted="false">Specify date</string>
    <string name="msg_set_time" formatted="false">Specify time</string>
    <string name="msg_invalid_data_in_fields" formatted="false">Invalid data</string>
    <string name="msg_error_on_write_to_db" formatted="false">Error on write to DB. Operation cancelled.</string>
    <string name="msg_error_on_read_from_db" formatted="false">Error on read from DB</string>
    <string name="msg_press_back_again_to_exit" formatted="false">Press back again to exit</string>
    <string name="ent_account" formatted="false">Account</string>
    <string name="ent_accounts" formatted="false">Accounts</string>
    <string name="ent_emitent" formatted="false">Issuer</string>
    <string name="ent_last4digits" formatted="false">Last 4 digits of the card number</string>
    <string name="ent_start_balance" formatted="false">Opening amount</string>
    <string name="ent_credit_limit" formatted="false">Credit limit</string>
    <string name="ent_account_isclosed" formatted="false">Account closed</string>
    <string name="ent_close_account" formatted="false">Close account</string>
    <string name="ent_open_account" formatted="false">Open account</string>
    <string name="ent_account_isincludeintototals" formatted="false">Include into totals</string>
    <string name="ent_new_account" formatted="false">New account</string>
    <string name="ent_edit_account" formatted="false">Edit account</string>
    <string name="ent_all_accounts" formatted="false">All accounts</string>
    <string name="ent_all_closed_accounts" formatted="false">All closed accounts</string>
    <string name="ent_active_account_set" formatted="false">Active accounts set</string>
    <string name="account_type_cash" formatted="false">Cash</string>
    <string name="account_type_bank_account" formatted="false">Bank account</string>
    <string name="account_type_debit_card" formatted="false">Debit card</string>
    <string name="account_type_credit_card" formatted="false">Credit card</string>
    <string name="account_type_asset" formatted="false">Asset</string>
    <string name="account_type_red" formatted="false">Liability</string>
    <string name="account_type_other" formatted="false">Other</string>
    <string name="acc_sort_type_custom" formatted="false">Manual</string>
    <string name="acc_sort_type_date_creation" formatted="false">By date of creation</string>
    <string name="acc_sort_type_date_last_operation" formatted="false">By date of the last operation</string>
    <string name="acc_sort_type_balance" formatted="false">By total sum</string>
    <string name="acc_sort_type_type" formatted="false">By type</string>
    <string name="acc_sort_type_alphabet" formatted="false">Alphabetically</string>
    <string name="act_drag_mode" formatted="false">Manual accounts ordering</string>
    <string name="act_balance_adjustment" formatted="false">Balance adjustment</string>
    <string name="act_add_accounts_set" formatted="false">Set of accounts</string>
    <string name="act_edit_name" formatted="false">Edit name</string>
    <string name="act_edit_accounts" formatted="false">Edit accounts</string>
    <string name="ttl_sort_accounts" formatted="false">Accounts ordering</string>
    <string name="ttl_accounts_sort_type" formatted="false">Sort by…</string>
    <string name="ttl_accounts_sort_order" formatted="false">Order</string>
    <string name="ttl_enter_actual_balance" formatted="false">Enter the actual balance</string>
    <string name="ttl_pull_to_create_account" formatted="false">Pull up to create account</string>
    <string name="msg_delete_account_confirmation" formatted="false">Delete account %s? All transactions on this account will be deleted.</string>
    <string name="msg_delete_account_set_confirmation" formatted="false">Delete account set %s?</string>
    <string name="msg_close_account_confirmation" formatted="false">Close account?</string>
    <string name="msg_open_account_confirmation" formatted="false">Open account?</string>
    <string name="hint_press_back_to_exit_drag_mode" formatted="false">Click the Back button to exit drag mode</string>
    <string name="err_specify_account_name" formatted="false">You must specify the account name</string>
    <string name="err_specify_account_currency" formatted="false">You must specify the account currency</string>
    <string name="err_account_name_must_be_unique" formatted="false">Account name must be unique</string>
    <string name="ent_transaction" formatted="false">Transaction</string>
    <string name="ent_transactions" formatted="false">Transactions</string>
    <string name="ent_transfer" formatted="false">Transfer</string>
    <string name="ent_payment" formatted="false">Payment</string>
    <string name="ent_dest_account" formatted="false">Destination account</string>
    <string name="ent_dest_amount" formatted="false">Amount in the recipient currency</string>
    <string name="ent_new_transfer" formatted="false">New transfer</string>
    <string name="ent_edit_transaction" formatted="false">Edit transaction</string>
    <string name="ent_edit_transfer" formatted="false">Edit transfer</string>
    <string name="act_create_transaction" formatted="false">New transaction</string>
    <string name="act_create_transaction_from_sms" formatted="false">Create a transaction</string>
    <string name="signOut">Выйти</string>
    <string name="text_successes_auth">Успешно авторизовались в гугл аккаунте</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="sign_out">Выйти</string>
    <string name="handle_applications">Выбрать отслеживаемые приложения</string>
    <string name="home_button">На главную</string>
    <string name="add_template">Добавить шаблон</string>
    <string name="back_in_AddPatterns">Назад к списку приложений</string>
    <string name="textEditViewPatterns">Вставьте шаблон из смс или уведомления от приложения</string>
    <string name="WelcomeMessage">Добро пожаловать</string>
    <string name="password">пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="email_field">email адресс</string>
    <string name="Balance">Баланс</string>
    <string name="addBalance">Добавить баланс</string>
    <string name="example_write_currency">PLN или USD или GEL или EUR</string>
    <string name="balance_operation">Операции с Балансом</string>
    <string name="write_balance_you_card">Введите баланс вашего счёта</string>
    <string name="select_need_action">Выберите операцию</string>
    <string name="textBalanceWarning">При создании баланса, валюта, которую вы укажете будет основной и все остальные операции будут конвертироваться в неё. Баланс можно создать только в 1 валюте</string>
    <string name="googleButtonHomeMenu">Google Аккаунт</string>
    <string name="homeMenuMain2">Главное меню</string>
</resources>