<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".balance.BalanceActivity">

    <TextView
        android:id="@+id/textBalance"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"
        android:text="@string/Balance"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCreateBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/addBalance"
        app:layout_constraintBottom_toTopOf="@+id/buttonHomeBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectOperationBalance" />

    <Button
        android:id="@+id/buttonHomeBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="16dp"
        android:text="@string/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateBalance" />

    <EditText
        android:id="@+id/editTextCount"
        android:layout_width="360dp"
        android:layout_height="89dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/write_balance_you_card"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editTextCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextCurrency"
        android:layout_width="360dp"
        android:layout_height="89dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/example_write_currency"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/selectOperationBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCount" />

    <Spinner
        android:id="@+id/selectOperationBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/select_need_action"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCurrency" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="356dp"
        android:layout_height="83dp"
        android:layout_marginTop="24dp"
        android:text="@string/textBalanceWarning"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/editTextCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBalance" />

</androidx.constraintlayout.widget.ConstraintLayout>