<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityMenuPro">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="390dp"
        android:layout_height="383dp"
        app:layout_constraintBottom_toTopOf="@+id/signOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleAccountButton">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="75dp" />

    </ScrollView>

    <Button
        android:id="@+id/signOut"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:text="@string/signOut"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeMenu2Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/third_view"
        android:layout_width="279dp"
        android:layout_height="66dp"
        android:onClick="openThirdActivity"
        android:text="@string/handle_applications"
        app:layout_constraintBottom_toTopOf="@+id/buttonBalanceMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBalanceMenu"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:onClick="buttonBalanceMenu"
        android:text="@string/balance_operation"
        app:layout_constraintBottom_toTopOf="@+id/googleAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_view" />

    <Button
        android:id="@+id/googleAccountButton"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:text="@string/googleButtonHomeMenu"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBalanceMenu" />

    <Button
        android:id="@+id/homeMenu2Button"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:text="@string/homeMenuMain2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signOut"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>