<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patterns.AddPatternsActivity">

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/textEditViewPatterns"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/add_template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSuccessesAddTemplate" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="362dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSuccessesAddTemplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/add_template"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:onClick="sendPatterns"
        android:text="@string/add_template"
        app:layout_constraintBottom_toTopOf="@+id/createTemplates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <Button
        android:id="@+id/buttonBackOnAddPatterns"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:onClick="buttonBackOnAddPatterns"
        android:text="@string/back_in_AddPatterns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTemplates" />

    <TextView
        android:id="@+id/textViewSuccessesAddTemplate"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/createTemplates"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="Создать шаблоны"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackOnAddPatterns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_template" />

</androidx.constraintlayout.widget.ConstraintLayout>